--- a/index.html
+++ b/index.html
@@ -1,114 +1,26 @@
 <!DOCTYPE html>
 <html lang="ja">
 <head>
-    <meta charset="UTF-8">
-    <title>オンライン単語帳</title>
-    <style>
-        body {
-            font-family: sans-serif;
-            background: #f5f5f5;
-            padding: 20px;
-        }
-
-        h1 {
-            text-align: center;
-        }
-
-        .input-area {
-            display: flex;
-            gap: 10px;
-            margin-bottom: 20px;
-        }
-
-        input {
-            padding: 8px;
-            flex: 1;
-        }
-
-        button {
-            padding: 8px 12px;
-            cursor: pointer;
-        }
-
-        .card {
-            background: white;
-            padding: 10px;
-            margin-bottom: 10px;
-            border-radius: 6px;
-            cursor: pointer;
-        }
-
-        .meaning {
-            display: none;
-            color: #555;
-            margin-top: 5px;
-        }
-    </style>
+  <meta charset="UTF-8">
+  <title>CSV読み込み</title>
 </head>
 <body>
 
-<h1>オンライン単語帳</h1>
+<input type="file" id="csvFile" accept=".csv">
 
-<div class="input-area">
-    <input id="word" placeholder="単語">
-    <input id="meaning" placeholder="意味">
-    <button onclick="addWord()">追加</button>
-</div>
-
-<div id="list"></div>
-
+<script src="https://cdn.jsdelivr.net/npm/papaparse@5.4.1/papaparse.min.js"></script>
 <script>
-    const list = document.getElementById("list");
+document.getElementById("csvFile").addEventListener("change", function (e) {
+  const file = e.target.files[0];
 
-    let words = JSON.parse(localStorage.getItem("words")) || [];
-
-    function save() {
-        localStorage.setItem("words", JSON.stringify(words));
+  Papa.parse(file, {
+    header: true,
+    skipEmptyLines: true,
+    complete: function (results) {
+      console.log(results.data);
     }
-
-    function render() {
-        list.innerHTML = "";
-        words.forEach((item, index) => {
-            const card = document.createElement("div");
-            card.className = "card";
-
-            const word = document.createElement("div");
-            word.textContent = item.word;
-
-            const meaning = document.createElement("div");
-            meaning.textContent = item.meaning;
-            meaning.className = "meaning";
-
-            card.onclick = () => {
-                meaning.style.display =
-                    meaning.style.display === "none" ? "block" : "none";
-            };
-
-            card.appendChild(word);
-            card.appendChild(meaning);
-            list.appendChild(card);
-        });
-    }
-
-    function addWord() {
-        const wordInput = document.getElementById("word");
-        const meaningInput = document.getElementById("meaning");
-
-        if (!wordInput.value || !meaningInput.value) return;
-
-        words.push({
-            word: wordInput.value,
-            meaning: meaningInput.value
-        });
-
-        wordInput.value = "";
-        meaningInput.value = "";
-
-        save();
-        render();
-    }
-
-    render();
+  });
+});
 </script>
 
 </body>
