--- a/index.html
+++ b/index.html
@@ -2,25 +2,25 @@
 <html lang="ja">
 <head>
   <meta charset="UTF-8">
-  <title>CSV読み込み</title>
+  <title>GitHub CSV読み込み</title>
 </head>
 <body>
 
-<input type="file" id="csvFile" accept=".csv">
-
 <script src="https://cdn.jsdelivr.net/npm/papaparse@5.4.1/papaparse.min.js"></script>
 <script>
-document.getElementById("csvFile").addEventListener("change", function (e) {
-  const file = e.target.files[0];
+const csvUrl = "https://raw.githubusercontent.com/moriwakiren-fucc/memorize-anki/ankidta/01.csv";
 
-  Papa.parse(file, {
-    header: true,
-    skipEmptyLines: true,
-    complete: function (results) {
-      console.log(results.data);
-    }
+fetch(csvUrl)
+  .then(response => response.text())
+  .then(csvText => {
+    Papa.parse(csvText, {
+      header: true,
+      skipEmptyLines: true,
+      complete: function (results) {
+        console.log(results.data);
+      }
+    });
   });
-});
 </script>
 
 </body>
