--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 
 <script src="https://cdn.jsdelivr.net/npm/papaparse@5.4.1/papaparse.min.js"></script>
 <script>
-const csvUrl = "https://raw.githubusercontent.com/ユーザー名/リポジトリ名/main/data.csv";
+const csvUrl = "https://raw.githubusercontent.com/moriwakiren-fucc/memorize/ankidata/main/data.csv";
 
 fetch(csvUrl)
   .then(response => response.text())
