--- a/index.html
+++ b/index.html
@@ -2,24 +2,39 @@
 <html lang="ja">
 <head>
   <meta charset="UTF-8">
-  <title>GitHub CSV読み込み</title>
+  <title>GitHub CSV 読み込み</title>
 </head>
 <body>
 
+<h1>CSV読み込みテスト</h1>
+
 <script src="https://cdn.jsdelivr.net/npm/papaparse@5.4.1/papaparse.min.js"></script>
 <script>
-const csvUrl = "https://raw.githubusercontent.com/moriwakiren-fucc/memorize-anki/refs/heads/main/ankidata/01.csv";
+const csvUrl = "https://raw.githubusercontent.com/moriwakiren-fucc/memorize-anki/main/ankidata/01.csv";
 
 fetch(csvUrl)
-  .then(response => response.text())
+  .then(response => {
+    console.log("HTTPステータス:", response.status);
+    if (!response.ok) {
+      throw new Error("CSVの取得に失敗");
+    }
+    return response.text();
+  })
   .then(csvText => {
+    console.log("CSVの中身↓");
+    console.log(csvText);
+
     Papa.parse(csvText, {
       header: true,
       skipEmptyLines: true,
       complete: function (results) {
+        console.log("解析結果↓");
         console.log(results.data);
       }
     });
+  })
+  .catch(error => {
+    console.error("エラー:", error);
   });
 </script>
 
